Add '26.3-rc-2' sources